@@ -1,4 +1,4 @@
-# Copyright 2004 Free Software Foundation, Inc.
+# Copyright 2004, 2005 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -34,7 +34,17 @@ if ![istarget "i?86-*-*"] then {
 set testfile "i386-sse"
 set srcfile ${testfile}.c
 set binfile ${objdir}/${subdir}/${testfile}
-if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable {debug}] != "" } {
+
+if [get_compiler_info ${binfile}] {
+    return -1
+}
+
+set additional_flags ""
+if [test_compiler_info gcc*] {
+    set additional_flags "additional_flags=-msse"
+}
+
+if { [gdb_compile "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable [list debug $additional_flags]] != "" } {
     unsupported "compiler does not support SSE"
     return
 }
